# sdp-config

./: .git-blame-ignore-revs  .gitlab-ci.yml  .pylintrc  CHANGELOG.md  CONTRIBUTORS  LICENCE  README.md  SCHEMA.md  requirements-test.txt  requirements.txt  setup.cfg  setup.py  unit-tests.xml
docs/: requirements.txt
docs/src/: api.rst  cli.rst  conf.py  design.rst  index.rst  installation.rst  schema.rst
docs/src/configuration/: config_api.rst  config_schema.rst
scripts/: docker_run_etcd.sh  docker_run_python.sh  ska-sdp
src/ska_sdp_config/: __init__.py  cli.py  config.py  version.py
src/ska_sdp_config/backend/: common.py  etcd3.py  k8s_fwd.py  memory.py
src/ska_sdp_config/entity/: deployment.py  pb.py
src/ska_sdp_config/new_cli/: sdp_create.py  sdp_delete.py  sdp_get.py  sdp_list.py  sdp_process.py  sdp_update.py  ska_sdp.py
src/ska_sdp_config/ska_sdp_cli/: sdp_create.py  sdp_delete.py  sdp_deploy.py  sdp_get.py  sdp_import.py  sdp_list.py  sdp_process.py  sdp_update.py  ska_sdp.py
tests/: test_backend_etcd3.py  test_backend_memory.py  test_cli.py  test_master.py  test_processing_block.py  test_scheduling_block.py  test_ska_sdp_cli.py  test_subarray.py  test_workflow.py
tests/ska_sdp_cli/: test_cli_functions.py  test_cli_mains.py
