[metadata]
description-file = README.md

[aliases]
test = pytest

[run]
branch = True
source = ska_sdp_config
omit = */__init__.py

[tool:pytest]
junit_family=legacy
addopts = -vv
          --pylint
          --capture=no
          --cov=ska_sdp_config
          --cov-config=setup.cfg
          --cov-report=term
          --cov-report=xml:code-coverage.xml
          --cov-report=html
          --no-cov-on-fail
          --cov-append
          --cov-branch
          --junitxml=unit-tests.xml
filterwarnings =
    ignore:Call to deprecated method loop.:DeprecationWarning

[report]
skip_covered = False
sort = Cover

[bumpver]
current_version = "0.3.1"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Release {new_version}"
commit = True
tag = True
push = True

[bumpver:file_patterns]
setup.cfg =
    current_version = "{version}"
src/ska_sdp_config/version.py =
    __version__ = "{version}"
docs/src/conf.py =
    version = "{version}"
    release = "{version}"